# salary-superhost-ml

./: LICENSE  README.md  justfile  pyproject.toml  run_tests.py
scripts/: train_classification.py  train_regression.py
src/ml_portfolio/: __init__.py
src/ml_portfolio/classification/: __init__.py  features.py  models.py  pipeline.py  preprocessing.py
src/ml_portfolio/regression/: __init__.py  features.py  models.py  pipeline.py  preprocessing.py
src/ml_portfolio/shared/: __init__.py  utils.py
tests/: __init__.py  test_classification_pipeline.py  test_regression_pipeline.py
