[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-portfolio"
version = "0.1.0"
description = "End-to-end ML pipelines for salary prediction (regression) and Airbnb superhost classification."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.8.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "jupyter-ruff>=0.3.0",
    "nbconvert[webpdf]>=7.16.6",
    "pytest>=8.0.0",
    "scipy-stubs>=1.16.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ml_portfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
